--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
-<html>
-  <head>
-    <title>Personal Website (first draft)</title>
-  </head>
-  <body>
-    <h1>heading</h1>
-    <p>paragrpah</p>
-  </body>
+<html lang="en">
+    <head>
+        <title>Beatrice Spence's Homepage</title>
+          <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+
+    <body>
+        <main>
+            <h1>Beatrice Spence</h1>
+            <h2>Second Year Computer Science undergraduate at Pembroke College, Cambridge</h2>
+
+            <h3>About</h3>
+            <p>Information about me</p>
+
+            <h3>Education</h3>
+            <div>
+                <p>2024 -</p>
+                <h4>University of Cambridge</h4>
+                <p>BA in Computer Science; Pembroke College</p>
+            </div>
+
+            <h3>Experience</h3>
+            <div>
+                <p>June 2025 - September 2025</p>
+                <h4>Research Intern (3D reconstruction, 3DGS)</h4>
+                <p>Insect Ecology Group; Tiff Ki, Anil Madhavapeddy, Edgar Turner</p>
+            </div>
+
+            <h3>Projects</h3>
+            <div>
+                <h4>Affordable 3D digitisation of Insect Collections</h4>
+                <p>links here</p>
+            </div>
+        </main>
+    </body>
 </html>
